absolute path to favicon

--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -2,8 +2,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Epnyx</title>
-		<link rel="shortcut icon" href="images/favicon.ico" />
-		<link rel="icon" href="images/favicon.ico" />
+		<link rel="shortcut icon" href="/images/favicon.ico" />
+		<link rel="icon" href="/images/favicon.ico" />
 		<meta content="Direct Democracy free for all system" name="description" />
 		<meta content="Direct Democracy, Revolution, System of Government" name="keywords" />
 		<meta content="follow,index,imageindex" name="robots" />
